@@ -25,6 +25,7 @@
                         </sequence>
                         <attribute name="uei" type="string" use="required"/>
                         <attribute name="acknowledge" type="string" use="required"/>
+                        <attribute name="clear" type="boolean" use="optional"/>
                 </complexType>
         </element>
         
