@@ -1,5 +1,7 @@
 1.0.0 to 1.1.0
 ----------------------------------------------------------------------
+- Added a "clear" attribute to the acknowledge tag for notifications,
+  so now the "up" can be ack'd along with the "down". Bug 544
 - Added a "title" to categories to reflect the last update. Bug 517
 - Fixed the AM/PM in the Performance Report drop down. Bug 515
 - Fixed some typos and bad URLs in error messages. Bug 662
